Parte 1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration program
Rule 2     program -> definition program
Rule 3     program -> declaration
Rule 4     program -> definition
Rule 5     empty -> <empty>
Rule 6     declaration -> DECL VARIABLE LPAREN RPAREN COLON type
Rule 7     declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type
Rule 8     definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block return
Rule 9     definition -> DEF VARIABLE LPAREN RPAREN COLON type block return
Rule 10    arg -> VARIABLE COLON type
Rule 11    arg -> VARIABLE COLON type COMMA arg
Rule 12    block -> LBRACKET block_content_check RBRACKET
Rule 13    block_content_check -> block_content block_content_check
Rule 14    block_content_check -> empty
Rule 15    block_content -> return
Rule 16    block_content -> stat_expression
Rule 17    block_content -> if
Rule 18    block_content -> if_else
Rule 19    block_content -> while
Rule 20    block_content -> var_decl
Rule 21    block_content -> var_ass
Rule 22    return -> RETURN SEMICOLONS
Rule 23    return -> RETURN expression SEMICOLONS
Rule 24    stat_expression -> expression SEMICOLONS
Rule 25    if -> IF expression block
Rule 26    if_else -> if ELSE block
Rule 27    while -> WHILE expression block
Rule 28    var_decl -> VARIABLE COLON type EQUALS expression SEMICOLONS
Rule 29    type -> INT_TYPE
Rule 30    type -> FLOAT_TYPE
Rule 31    type -> STRING_TYPE
Rule 32    type -> BOOL_TYPE
Rule 33    type -> VOID_TYPE
Rule 34    var_ass -> VARIABLE EQUALS expression SEMICOLONS
Rule 35    expression -> expression PLUS expression
Rule 36    expression -> expression MINUS expression
Rule 37    expression -> expression TIMES expression
Rule 38    expression -> expression DIVIDE expression
Rule 39    expression -> expression COMP expression
Rule 40    expression -> expression AND expression
Rule 41    expression -> expression OR expression
Rule 42    expression -> expression NOT_EQUALS expression
Rule 43    expression -> expression GREATER_OR_EQUAL expression
Rule 44    expression -> expression LESS_OR_EQUALS expression
Rule 45    expression -> expression GREATER expression
Rule 46    expression -> expression LESS expression
Rule 47    expression -> expression MODULO expression
Rule 48    expression -> MINUS expression
Rule 49    expression -> LPAREN expression RPAREN
Rule 50    expression -> INT
Rule 51    expression -> FLOAT
Rule 52    expression -> STRING
Rule 53    expression -> TRUE
Rule 54    expression -> FALSE
Rule 55    expression -> VARIABLE
Rule 56    expression -> NOT expression
Rule 57    expression -> VARIABLE LRPARN expression RRPAREN
Rule 58    expression -> GET_ARRAY LRPARN expression RRPAREN
Rule 59    expression -> VARIABLE LPAREN arg_f RPAREN
Rule 60    arg_f -> VARIABLE
Rule 61    arg_f -> VARIABLE COMMA arg_f

Terminals, with rules where they appear

AND                  : 40
BOOL_TYPE            : 32
COLON                : 6 7 8 9 10 11 28
COMMA                : 11 61
COMP                 : 39
DECL                 : 6 7
DEF                  : 8 9
DIVIDE               : 38
ELSE                 : 26
EQUALS               : 28 34
FALSE                : 54
FLOAT                : 51
FLOAT_TYPE           : 30
GET_ARRAY            : 58
GREATER              : 45
GREATER_OR_EQUAL     : 43
IF                   : 25
INT                  : 50
INT_TYPE             : 29
LBRACKET             : 12
LESS                 : 46
LESS_OR_EQUALS       : 44
LPAREN               : 6 7 8 9 49 59
LRPARN               : 57 58
MINUS                : 36 48
MODULO               : 47
NOT                  : 56
NOT_EQUALS           : 42
OR                   : 41
PLUS                 : 35
RBRACKET             : 12
RETURN               : 22 23
RPAREN               : 6 7 8 9 49 59
RRPAREN              : 57 58
SEMICOLONS           : 22 23 24 28 34
STRING               : 52
STRING_TYPE          : 31
TIMES                : 37
TRUE                 : 53
VARIABLE             : 6 7 8 9 10 11 28 34 55 57 59 60 61
VOID_TYPE            : 33
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

arg                  : 7 8 11
arg_f                : 59 61
block                : 8 9 25 26 27
block_content        : 13
block_content_check  : 12 13
declaration          : 1 3
definition           : 2 4
empty                : 14
expression           : 23 24 25 27 28 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 49 56 57 58
if                   : 17 26
if_else              : 18
program              : 1 2 0
return               : 8 9 15
stat_expression      : 16
type                 : 6 7 8 9 10 11 28
var_ass              : 21
var_decl             : 20
while                : 19

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration program
    (2) program -> . definition program
    (3) program -> . declaration
    (4) program -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN RPAREN COLON type
    (7) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (8) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block return
    (9) definition -> . DEF VARIABLE LPAREN RPAREN COLON type block return

    DECL            shift and go to state 4
    DEF             shift and go to state 5

    program                        shift and go to state 1
    declaration                    shift and go to state 2
    definition                     shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration . program
    (3) program -> declaration .
    (1) program -> . declaration program
    (2) program -> . definition program
    (3) program -> . declaration
    (4) program -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN RPAREN COLON type
    (7) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (8) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block return
    (9) definition -> . DEF VARIABLE LPAREN RPAREN COLON type block return

    $end            reduce using rule 3 (program -> declaration .)
    DECL            shift and go to state 4
    DEF             shift and go to state 5

    declaration                    shift and go to state 2
    program                        shift and go to state 6
    definition                     shift and go to state 3

state 3

    (2) program -> definition . program
    (4) program -> definition .
    (1) program -> . declaration program
    (2) program -> . definition program
    (3) program -> . declaration
    (4) program -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN RPAREN COLON type
    (7) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (8) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block return
    (9) definition -> . DEF VARIABLE LPAREN RPAREN COLON type block return

    $end            reduce using rule 4 (program -> definition .)
    DECL            shift and go to state 4
    DEF             shift and go to state 5

    definition                     shift and go to state 3
    program                        shift and go to state 7
    declaration                    shift and go to state 2

state 4

    (6) declaration -> DECL . VARIABLE LPAREN RPAREN COLON type
    (7) declaration -> DECL . VARIABLE LPAREN arg RPAREN COLON type

    VARIABLE        shift and go to state 8


state 5

    (8) definition -> DEF . VARIABLE LPAREN arg RPAREN COLON type block return
    (9) definition -> DEF . VARIABLE LPAREN RPAREN COLON type block return

    VARIABLE        shift and go to state 9


state 6

    (1) program -> declaration program .

    $end            reduce using rule 1 (program -> declaration program .)


state 7

    (2) program -> definition program .

    $end            reduce using rule 2 (program -> definition program .)


state 8

    (6) declaration -> DECL VARIABLE . LPAREN RPAREN COLON type
    (7) declaration -> DECL VARIABLE . LPAREN arg RPAREN COLON type

    LPAREN          shift and go to state 10


state 9

    (8) definition -> DEF VARIABLE . LPAREN arg RPAREN COLON type block return
    (9) definition -> DEF VARIABLE . LPAREN RPAREN COLON type block return

    LPAREN          shift and go to state 11


state 10

    (6) declaration -> DECL VARIABLE LPAREN . RPAREN COLON type
    (7) declaration -> DECL VARIABLE LPAREN . arg RPAREN COLON type
    (10) arg -> . VARIABLE COLON type
    (11) arg -> . VARIABLE COLON type COMMA arg

    RPAREN          shift and go to state 13
    VARIABLE        shift and go to state 12

    arg                            shift and go to state 14

state 11

    (8) definition -> DEF VARIABLE LPAREN . arg RPAREN COLON type block return
    (9) definition -> DEF VARIABLE LPAREN . RPAREN COLON type block return
    (10) arg -> . VARIABLE COLON type
    (11) arg -> . VARIABLE COLON type COMMA arg

    RPAREN          shift and go to state 16
    VARIABLE        shift and go to state 12

    arg                            shift and go to state 15

state 12

    (10) arg -> VARIABLE . COLON type
    (11) arg -> VARIABLE . COLON type COMMA arg

    COLON           shift and go to state 17


state 13

    (6) declaration -> DECL VARIABLE LPAREN RPAREN . COLON type

    COLON           shift and go to state 18


state 14

    (7) declaration -> DECL VARIABLE LPAREN arg . RPAREN COLON type

    RPAREN          shift and go to state 19


state 15

    (8) definition -> DEF VARIABLE LPAREN arg . RPAREN COLON type block return

    RPAREN          shift and go to state 20


state 16

    (9) definition -> DEF VARIABLE LPAREN RPAREN . COLON type block return

    COLON           shift and go to state 21


state 17

    (10) arg -> VARIABLE COLON . type
    (11) arg -> VARIABLE COLON . type COMMA arg
    (29) type -> . INT_TYPE
    (30) type -> . FLOAT_TYPE
    (31) type -> . STRING_TYPE
    (32) type -> . BOOL_TYPE
    (33) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 23
    FLOAT_TYPE      shift and go to state 24
    STRING_TYPE     shift and go to state 25
    BOOL_TYPE       shift and go to state 26
    VOID_TYPE       shift and go to state 27

    type                           shift and go to state 22

state 18

    (6) declaration -> DECL VARIABLE LPAREN RPAREN COLON . type
    (29) type -> . INT_TYPE
    (30) type -> . FLOAT_TYPE
    (31) type -> . STRING_TYPE
    (32) type -> . BOOL_TYPE
    (33) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 23
    FLOAT_TYPE      shift and go to state 24
    STRING_TYPE     shift and go to state 25
    BOOL_TYPE       shift and go to state 26
    VOID_TYPE       shift and go to state 27

    type                           shift and go to state 28

state 19

    (7) declaration -> DECL VARIABLE LPAREN arg RPAREN . COLON type

    COLON           shift and go to state 29


state 20

    (8) definition -> DEF VARIABLE LPAREN arg RPAREN . COLON type block return

    COLON           shift and go to state 30


state 21

    (9) definition -> DEF VARIABLE LPAREN RPAREN COLON . type block return
    (29) type -> . INT_TYPE
    (30) type -> . FLOAT_TYPE
    (31) type -> . STRING_TYPE
    (32) type -> . BOOL_TYPE
    (33) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 23
    FLOAT_TYPE      shift and go to state 24
    STRING_TYPE     shift and go to state 25
    BOOL_TYPE       shift and go to state 26
    VOID_TYPE       shift and go to state 27

    type                           shift and go to state 31

state 22

    (10) arg -> VARIABLE COLON type .
    (11) arg -> VARIABLE COLON type . COMMA arg

    RPAREN          reduce using rule 10 (arg -> VARIABLE COLON type .)
    COMMA           shift and go to state 32


state 23

    (29) type -> INT_TYPE .

    COMMA           reduce using rule 29 (type -> INT_TYPE .)
    RPAREN          reduce using rule 29 (type -> INT_TYPE .)
    DECL            reduce using rule 29 (type -> INT_TYPE .)
    DEF             reduce using rule 29 (type -> INT_TYPE .)
    $end            reduce using rule 29 (type -> INT_TYPE .)
    LBRACKET        reduce using rule 29 (type -> INT_TYPE .)
    EQUALS          reduce using rule 29 (type -> INT_TYPE .)


state 24

    (30) type -> FLOAT_TYPE .

    COMMA           reduce using rule 30 (type -> FLOAT_TYPE .)
    RPAREN          reduce using rule 30 (type -> FLOAT_TYPE .)
    DECL            reduce using rule 30 (type -> FLOAT_TYPE .)
    DEF             reduce using rule 30 (type -> FLOAT_TYPE .)
    $end            reduce using rule 30 (type -> FLOAT_TYPE .)
    LBRACKET        reduce using rule 30 (type -> FLOAT_TYPE .)
    EQUALS          reduce using rule 30 (type -> FLOAT_TYPE .)


state 25

    (31) type -> STRING_TYPE .

    COMMA           reduce using rule 31 (type -> STRING_TYPE .)
    RPAREN          reduce using rule 31 (type -> STRING_TYPE .)
    DECL            reduce using rule 31 (type -> STRING_TYPE .)
    DEF             reduce using rule 31 (type -> STRING_TYPE .)
    $end            reduce using rule 31 (type -> STRING_TYPE .)
    LBRACKET        reduce using rule 31 (type -> STRING_TYPE .)
    EQUALS          reduce using rule 31 (type -> STRING_TYPE .)


state 26

    (32) type -> BOOL_TYPE .

    COMMA           reduce using rule 32 (type -> BOOL_TYPE .)
    RPAREN          reduce using rule 32 (type -> BOOL_TYPE .)
    DECL            reduce using rule 32 (type -> BOOL_TYPE .)
    DEF             reduce using rule 32 (type -> BOOL_TYPE .)
    $end            reduce using rule 32 (type -> BOOL_TYPE .)
    LBRACKET        reduce using rule 32 (type -> BOOL_TYPE .)
    EQUALS          reduce using rule 32 (type -> BOOL_TYPE .)


state 27

    (33) type -> VOID_TYPE .

    COMMA           reduce using rule 33 (type -> VOID_TYPE .)
    RPAREN          reduce using rule 33 (type -> VOID_TYPE .)
    DECL            reduce using rule 33 (type -> VOID_TYPE .)
    DEF             reduce using rule 33 (type -> VOID_TYPE .)
    $end            reduce using rule 33 (type -> VOID_TYPE .)
    LBRACKET        reduce using rule 33 (type -> VOID_TYPE .)
    EQUALS          reduce using rule 33 (type -> VOID_TYPE .)


state 28

    (6) declaration -> DECL VARIABLE LPAREN RPAREN COLON type .

    DECL            reduce using rule 6 (declaration -> DECL VARIABLE LPAREN RPAREN COLON type .)
    DEF             reduce using rule 6 (declaration -> DECL VARIABLE LPAREN RPAREN COLON type .)
    $end            reduce using rule 6 (declaration -> DECL VARIABLE LPAREN RPAREN COLON type .)


state 29

    (7) declaration -> DECL VARIABLE LPAREN arg RPAREN COLON . type
    (29) type -> . INT_TYPE
    (30) type -> . FLOAT_TYPE
    (31) type -> . STRING_TYPE
    (32) type -> . BOOL_TYPE
    (33) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 23
    FLOAT_TYPE      shift and go to state 24
    STRING_TYPE     shift and go to state 25
    BOOL_TYPE       shift and go to state 26
    VOID_TYPE       shift and go to state 27

    type                           shift and go to state 33

state 30

    (8) definition -> DEF VARIABLE LPAREN arg RPAREN COLON . type block return
    (29) type -> . INT_TYPE
    (30) type -> . FLOAT_TYPE
    (31) type -> . STRING_TYPE
    (32) type -> . BOOL_TYPE
    (33) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 23
    FLOAT_TYPE      shift and go to state 24
    STRING_TYPE     shift and go to state 25
    BOOL_TYPE       shift and go to state 26
    VOID_TYPE       shift and go to state 27

    type                           shift and go to state 34

state 31

    (9) definition -> DEF VARIABLE LPAREN RPAREN COLON type . block return
    (12) block -> . LBRACKET block_content_check RBRACKET

    LBRACKET        shift and go to state 36

    block                          shift and go to state 35

state 32

    (11) arg -> VARIABLE COLON type COMMA . arg
    (10) arg -> . VARIABLE COLON type
    (11) arg -> . VARIABLE COLON type COMMA arg

    VARIABLE        shift and go to state 12

    arg                            shift and go to state 37

state 33

    (7) declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .

    DECL            reduce using rule 7 (declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .)
    DEF             reduce using rule 7 (declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .)
    $end            reduce using rule 7 (declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type .)


state 34

    (8) definition -> DEF VARIABLE LPAREN arg RPAREN COLON type . block return
    (12) block -> . LBRACKET block_content_check RBRACKET

    LBRACKET        shift and go to state 36

    block                          shift and go to state 38

state 35

    (9) definition -> DEF VARIABLE LPAREN RPAREN COLON type block . return
    (22) return -> . RETURN SEMICOLONS
    (23) return -> . RETURN expression SEMICOLONS

    RETURN          shift and go to state 40

    return                         shift and go to state 39

state 36

    (12) block -> LBRACKET . block_content_check RBRACKET
    (13) block_content_check -> . block_content block_content_check
    (14) block_content_check -> . empty
    (15) block_content -> . return
    (16) block_content -> . stat_expression
    (17) block_content -> . if
    (18) block_content -> . if_else
    (19) block_content -> . while
    (20) block_content -> . var_decl
    (21) block_content -> . var_ass
    (5) empty -> .
    (22) return -> . RETURN SEMICOLONS
    (23) return -> . RETURN expression SEMICOLONS
    (24) stat_expression -> . expression SEMICOLONS
    (25) if -> . IF expression block
    (26) if_else -> . if ELSE block
    (27) while -> . WHILE expression block
    (28) var_decl -> . VARIABLE COLON type EQUALS expression SEMICOLONS
    (34) var_ass -> . VARIABLE EQUALS expression SEMICOLONS
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression COMP expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . expression NOT_EQUALS expression
    (43) expression -> . expression GREATER_OR_EQUAL expression
    (44) expression -> . expression LESS_OR_EQUALS expression
    (45) expression -> . expression GREATER expression
    (46) expression -> . expression LESS expression
    (47) expression -> . expression MODULO expression
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . INT
    (51) expression -> . FLOAT
    (52) expression -> . STRING
    (53) expression -> . TRUE
    (54) expression -> . FALSE
    (55) expression -> . VARIABLE
    (56) expression -> . NOT expression
    (57) expression -> . VARIABLE LRPARN expression RRPAREN
    (58) expression -> . GET_ARRAY LRPARN expression RRPAREN
    (59) expression -> . VARIABLE LPAREN arg_f RPAREN

    RBRACKET        reduce using rule 5 (empty -> .)
    RETURN          shift and go to state 40
    IF              shift and go to state 52
    WHILE           shift and go to state 53
    VARIABLE        shift and go to state 54
    MINUS           shift and go to state 55
    LPAREN          shift and go to state 56
    INT             shift and go to state 57
    FLOAT           shift and go to state 58
    STRING          shift and go to state 59
    TRUE            shift and go to state 60
    FALSE           shift and go to state 61
    NOT             shift and go to state 62
    GET_ARRAY       shift and go to state 63

    block_content_check            shift and go to state 41
    block_content                  shift and go to state 42
    empty                          shift and go to state 43
    return                         shift and go to state 44
    stat_expression                shift and go to state 45
    if                             shift and go to state 46
    if_else                        shift and go to state 47
    while                          shift and go to state 48
    var_decl                       shift and go to state 49
    var_ass                        shift and go to state 50
    expression                     shift and go to state 51

state 37

    (11) arg -> VARIABLE COLON type COMMA arg .

    RPAREN          reduce using rule 11 (arg -> VARIABLE COLON type COMMA arg .)


state 38

    (8) definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block . return
    (22) return -> . RETURN SEMICOLONS
    (23) return -> . RETURN expression SEMICOLONS

    RETURN          shift and go to state 40

    return                         shift and go to state 64

state 39

    (9) definition -> DEF VARIABLE LPAREN RPAREN COLON type block return .

    DECL            reduce using rule 9 (definition -> DEF VARIABLE LPAREN RPAREN COLON type block return .)
    DEF             reduce using rule 9 (definition -> DEF VARIABLE LPAREN RPAREN COLON type block return .)
    $end            reduce using rule 9 (definition -> DEF VARIABLE LPAREN RPAREN COLON type block return .)


state 40

    (22) return -> RETURN . SEMICOLONS
    (23) return -> RETURN . expression SEMICOLONS
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression COMP expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . expression NOT_EQUALS expression
    (43) expression -> . expression GREATER_OR_EQUAL expression
    (44) expression -> . expression LESS_OR_EQUALS expression
    (45) expression -> . expression GREATER expression
    (46) expression -> . expression LESS expression
    (47) expression -> . expression MODULO expression
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . INT
    (51) expression -> . FLOAT
    (52) expression -> . STRING
    (53) expression -> . TRUE
    (54) expression -> . FALSE
    (55) expression -> . VARIABLE
    (56) expression -> . NOT expression
    (57) expression -> . VARIABLE LRPARN expression RRPAREN
    (58) expression -> . GET_ARRAY LRPARN expression RRPAREN
    (59) expression -> . VARIABLE LPAREN arg_f RPAREN

    SEMICOLONS      shift and go to state 65
    MINUS           shift and go to state 55
    LPAREN          shift and go to state 56
    INT             shift and go to state 57
    FLOAT           shift and go to state 58
    STRING          shift and go to state 59
    TRUE            shift and go to state 60
    FALSE           shift and go to state 61
    VARIABLE        shift and go to state 67
    NOT             shift and go to state 62
    GET_ARRAY       shift and go to state 63

    expression                     shift and go to state 66

state 41

    (12) block -> LBRACKET block_content_check . RBRACKET

    RBRACKET        shift and go to state 68


state 42

    (13) block_content_check -> block_content . block_content_check
    (13) block_content_check -> . block_content block_content_check
    (14) block_content_check -> . empty
    (15) block_content -> . return
    (16) block_content -> . stat_expression
    (17) block_content -> . if
    (18) block_content -> . if_else
    (19) block_content -> . while
    (20) block_content -> . var_decl
    (21) block_content -> . var_ass
    (5) empty -> .
    (22) return -> . RETURN SEMICOLONS
    (23) return -> . RETURN expression SEMICOLONS
    (24) stat_expression -> . expression SEMICOLONS
    (25) if -> . IF expression block
    (26) if_else -> . if ELSE block
    (27) while -> . WHILE expression block
    (28) var_decl -> . VARIABLE COLON type EQUALS expression SEMICOLONS
    (34) var_ass -> . VARIABLE EQUALS expression SEMICOLONS
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression COMP expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . expression NOT_EQUALS expression
    (43) expression -> . expression GREATER_OR_EQUAL expression
    (44) expression -> . expression LESS_OR_EQUALS expression
    (45) expression -> . expression GREATER expression
    (46) expression -> . expression LESS expression
    (47) expression -> . expression MODULO expression
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . INT
    (51) expression -> . FLOAT
    (52) expression -> . STRING
    (53) expression -> . TRUE
    (54) expression -> . FALSE
    (55) expression -> . VARIABLE
    (56) expression -> . NOT expression
    (57) expression -> . VARIABLE LRPARN expression RRPAREN
    (58) expression -> . GET_ARRAY LRPARN expression RRPAREN
    (59) expression -> . VARIABLE LPAREN arg_f RPAREN

    RBRACKET        reduce using rule 5 (empty -> .)
    RETURN          shift and go to state 40
    IF              shift and go to state 52
    WHILE           shift and go to state 53
    VARIABLE        shift and go to state 54
    MINUS           shift and go to state 55
    LPAREN          shift and go to state 56
    INT             shift and go to state 57
    FLOAT           shift and go to state 58
    STRING          shift and go to state 59
    TRUE            shift and go to state 60
    FALSE           shift and go to state 61
    NOT             shift and go to state 62
    GET_ARRAY       shift and go to state 63

    block_content                  shift and go to state 42
    block_content_check            shift and go to state 69
    empty                          shift and go to state 43
    return                         shift and go to state 44
    stat_expression                shift and go to state 45
    if                             shift and go to state 46
    if_else                        shift and go to state 47
    while                          shift and go to state 48
    var_decl                       shift and go to state 49
    var_ass                        shift and go to state 50
    expression                     shift and go to state 51

state 43

    (14) block_content_check -> empty .

    RBRACKET        reduce using rule 14 (block_content_check -> empty .)


state 44

    (15) block_content -> return .

    RETURN          reduce using rule 15 (block_content -> return .)
    IF              reduce using rule 15 (block_content -> return .)
    WHILE           reduce using rule 15 (block_content -> return .)
    VARIABLE        reduce using rule 15 (block_content -> return .)
    MINUS           reduce using rule 15 (block_content -> return .)
    LPAREN          reduce using rule 15 (block_content -> return .)
    INT             reduce using rule 15 (block_content -> return .)
    FLOAT           reduce using rule 15 (block_content -> return .)
    STRING          reduce using rule 15 (block_content -> return .)
    TRUE            reduce using rule 15 (block_content -> return .)
    FALSE           reduce using rule 15 (block_content -> return .)
    NOT             reduce using rule 15 (block_content -> return .)
    GET_ARRAY       reduce using rule 15 (block_content -> return .)
    RBRACKET        reduce using rule 15 (block_content -> return .)


state 45

    (16) block_content -> stat_expression .

    RETURN          reduce using rule 16 (block_content -> stat_expression .)
    IF              reduce using rule 16 (block_content -> stat_expression .)
    WHILE           reduce using rule 16 (block_content -> stat_expression .)
    VARIABLE        reduce using rule 16 (block_content -> stat_expression .)
    MINUS           reduce using rule 16 (block_content -> stat_expression .)
    LPAREN          reduce using rule 16 (block_content -> stat_expression .)
    INT             reduce using rule 16 (block_content -> stat_expression .)
    FLOAT           reduce using rule 16 (block_content -> stat_expression .)
    STRING          reduce using rule 16 (block_content -> stat_expression .)
    TRUE            reduce using rule 16 (block_content -> stat_expression .)
    FALSE           reduce using rule 16 (block_content -> stat_expression .)
    NOT             reduce using rule 16 (block_content -> stat_expression .)
    GET_ARRAY       reduce using rule 16 (block_content -> stat_expression .)
    RBRACKET        reduce using rule 16 (block_content -> stat_expression .)


state 46

    (17) block_content -> if .
    (26) if_else -> if . ELSE block

    RETURN          reduce using rule 17 (block_content -> if .)
    IF              reduce using rule 17 (block_content -> if .)
    WHILE           reduce using rule 17 (block_content -> if .)
    VARIABLE        reduce using rule 17 (block_content -> if .)
    MINUS           reduce using rule 17 (block_content -> if .)
    LPAREN          reduce using rule 17 (block_content -> if .)
    INT             reduce using rule 17 (block_content -> if .)
    FLOAT           reduce using rule 17 (block_content -> if .)
    STRING          reduce using rule 17 (block_content -> if .)
    TRUE            reduce using rule 17 (block_content -> if .)
    FALSE           reduce using rule 17 (block_content -> if .)
    NOT             reduce using rule 17 (block_content -> if .)
    GET_ARRAY       reduce using rule 17 (block_content -> if .)
    RBRACKET        reduce using rule 17 (block_content -> if .)
    ELSE            shift and go to state 70


state 47

    (18) block_content -> if_else .

    RETURN          reduce using rule 18 (block_content -> if_else .)
    IF              reduce using rule 18 (block_content -> if_else .)
    WHILE           reduce using rule 18 (block_content -> if_else .)
    VARIABLE        reduce using rule 18 (block_content -> if_else .)
    MINUS           reduce using rule 18 (block_content -> if_else .)
    LPAREN          reduce using rule 18 (block_content -> if_else .)
    INT             reduce using rule 18 (block_content -> if_else .)
    FLOAT           reduce using rule 18 (block_content -> if_else .)
    STRING          reduce using rule 18 (block_content -> if_else .)
    TRUE            reduce using rule 18 (block_content -> if_else .)
    FALSE           reduce using rule 18 (block_content -> if_else .)
    NOT             reduce using rule 18 (block_content -> if_else .)
    GET_ARRAY       reduce using rule 18 (block_content -> if_else .)
    RBRACKET        reduce using rule 18 (block_content -> if_else .)


state 48

    (19) block_content -> while .

    RETURN          reduce using rule 19 (block_content -> while .)
    IF              reduce using rule 19 (block_content -> while .)
    WHILE           reduce using rule 19 (block_content -> while .)
    VARIABLE        reduce using rule 19 (block_content -> while .)
    MINUS           reduce using rule 19 (block_content -> while .)
    LPAREN          reduce using rule 19 (block_content -> while .)
    INT             reduce using rule 19 (block_content -> while .)
    FLOAT           reduce using rule 19 (block_content -> while .)
    STRING          reduce using rule 19 (block_content -> while .)
    TRUE            reduce using rule 19 (block_content -> while .)
    FALSE           reduce using rule 19 (block_content -> while .)
    NOT             reduce using rule 19 (block_content -> while .)
    GET_ARRAY       reduce using rule 19 (block_content -> while .)
    RBRACKET        reduce using rule 19 (block_content -> while .)


state 49

    (20) block_content -> var_decl .

    RETURN          reduce using rule 20 (block_content -> var_decl .)
    IF              reduce using rule 20 (block_content -> var_decl .)
    WHILE           reduce using rule 20 (block_content -> var_decl .)
    VARIABLE        reduce using rule 20 (block_content -> var_decl .)
    MINUS           reduce using rule 20 (block_content -> var_decl .)
    LPAREN          reduce using rule 20 (block_content -> var_decl .)
    INT             reduce using rule 20 (block_content -> var_decl .)
    FLOAT           reduce using rule 20 (block_content -> var_decl .)
    STRING          reduce using rule 20 (block_content -> var_decl .)
    TRUE            reduce using rule 20 (block_content -> var_decl .)
    FALSE           reduce using rule 20 (block_content -> var_decl .)
    NOT             reduce using rule 20 (block_content -> var_decl .)
    GET_ARRAY       reduce using rule 20 (block_content -> var_decl .)
    RBRACKET        reduce using rule 20 (block_content -> var_decl .)


state 50

    (21) block_content -> var_ass .

    RETURN          reduce using rule 21 (block_content -> var_ass .)
    IF              reduce using rule 21 (block_content -> var_ass .)
    WHILE           reduce using rule 21 (block_content -> var_ass .)
    VARIABLE        reduce using rule 21 (block_content -> var_ass .)
    MINUS           reduce using rule 21 (block_content -> var_ass .)
    LPAREN          reduce using rule 21 (block_content -> var_ass .)
    INT             reduce using rule 21 (block_content -> var_ass .)
    FLOAT           reduce using rule 21 (block_content -> var_ass .)
    STRING          reduce using rule 21 (block_content -> var_ass .)
    TRUE            reduce using rule 21 (block_content -> var_ass .)
    FALSE           reduce using rule 21 (block_content -> var_ass .)
    NOT             reduce using rule 21 (block_content -> var_ass .)
    GET_ARRAY       reduce using rule 21 (block_content -> var_ass .)
    RBRACKET        reduce using rule 21 (block_content -> var_ass .)


state 51

    (24) stat_expression -> expression . SEMICOLONS
    (35) expression -> expression . PLUS expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . TIMES expression
    (38) expression -> expression . DIVIDE expression
    (39) expression -> expression . COMP expression
    (40) expression -> expression . AND expression
    (41) expression -> expression . OR expression
    (42) expression -> expression . NOT_EQUALS expression
    (43) expression -> expression . GREATER_OR_EQUAL expression
    (44) expression -> expression . LESS_OR_EQUALS expression
    (45) expression -> expression . GREATER expression
    (46) expression -> expression . LESS expression
    (47) expression -> expression . MODULO expression

    SEMICOLONS      shift and go to state 71
    PLUS            shift and go to state 72
    MINUS           shift and go to state 73
    TIMES           shift and go to state 74
    DIVIDE          shift and go to state 75
    COMP            shift and go to state 76
    AND             shift and go to state 77
    OR              shift and go to state 78
    NOT_EQUALS      shift and go to state 79
    GREATER_OR_EQUAL shift and go to state 80
    LESS_OR_EQUALS  shift and go to state 81
    GREATER         shift and go to state 82
    LESS            shift and go to state 83
    MODULO          shift and go to state 84


state 52

    (25) if -> IF . expression block
    (35) expression -> . expression PLUS expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression TIMES expression
    (38) expression -> . expression DIVIDE expression
    (39) expression -> . expression COMP expression
    (40) expression -> . expression AND expression
    (41) expression -> . expression OR expression
    (42) expression -> . expression NOT_EQUALS expression
    (43) expression -> . expression GREATER_OR_EQUAL expression
    (44) expression -> . expression LESS_OR_EQUALS expression
    (45) expression -> . expression GREATER expression
    (46) expression -> . expression LESS expression
    (47) expression -> . expression MODULO expression
    (48) expression -> . MINUS expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . INT
    (51) expression -> . FLOAT
